if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
  set(CMAKE_INSTALL_RPATH "\$ORIGIN/")
endif()

if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
  set(CMAKE_MACOSX_RPATH 1)
  set(CMAKE_INSTALL_RPATH "@loader_path")
endif()

add_subdirectory(core)
add_subdirectory(maths/common)
add_subdirectory(maths/time_series)
add_subdirectory(maths/analytics)
add_subdirectory(model)
add_subdirectory(api)
add_subdirectory(api/dump_state)
add_subdirectory(test)
add_subdirectory(ver)
add_subdirectory(seccomp)

